fix tiny gap above post titles in mobile

--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -43,6 +43,6 @@ header > a:hover {
 		height: calc(100% - 80px);
 		width: calc(100% - 40px);
 		margin: 10px;
-		margin-top: 70px;
+		margin-top: 60px;
 	}
 }
